Fix hambuger menu on mobile

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -122,3 +122,115 @@
 		opacity: 1;
 	}
 }
+
+
+.hamburger {
+    display : none;
+    position: absolute;
+    right: 20px;
+    top: 15px;
+    height: 40px;
+    width: 40px;
+    .ham {
+        cursor: pointer;
+        opacity: 0;
+        height: 100%;
+        width: 100%;
+        display: inline-block;
+        z-index: 999;
+        
+    }
+    
+	.ham:checked ~ .first {
+        opacity: 0;
+		transform: rotate(0deg) scale(0.2, 1);
+		transform-origin: left;
+		transition: all 0.5s ease;
+	}
+	
+	// middle
+	.ham:checked ~ .second {
+		transform: rotate(-30deg);
+		transform-origin: left;
+        transition: transform 0.5s ease;
+	}
+	
+	//bottom
+	.ham:checked ~ .third {
+
+        transform: rotate(30deg);
+		transform-origin: left;
+        transition: transform 0.5s ease;
+
+    }
+    
+    // Show mobile menu
+    .ham:checked ~ .mobileMenu {
+        display: block;
+    }
+
+    .mobileMenu {
+        background: rgba(255,255,255,0.9);
+        height: 100%;
+        width: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: -10;
+        padding-top: 40px;
+        .mobileMenu__item {
+                display: block;
+                text-align: center;
+                font-size: 4rem;
+                padding-top: 30px;
+        }
+        
+    }
+
+    span {
+        position:absolute;
+        top: 0px;
+        left: 0;
+        height: 3px;
+        width: 40px;
+        background: black;
+        border-radius: 5px;
+        transition: transform 0.5s ease;
+        transform-origin: left;
+        z-index: -1;
+        transform: scale(0.8);
+    }
+
+    // middle
+    span:nth-child(2) {
+        top: 10px;
+        transition: transform 0.5s ease;
+        opacity: 1;
+        transform-origin: left;
+    }
+
+    //bottom
+    span:nth-child(3) {
+        top: 20px;
+        transition: transform 0.5s ease;
+        transform-origin: left;
+    }
+
+    &:hover {
+        cursor: poiner;
+    }
+}
+
+
+@media only screen and (max-width: 1024px) {
+    .navbar-end {
+      display: none;
+    }
+    .hamburger {
+        display: block;
+    }
+
+    .mobileMenu {
+        display: none;
+    }
+  }
